fix: make scanlines more visible

--- a/CV/css/styles.css
+++ b/CV/css/styles.css
@@ -6,7 +6,7 @@
     --dotted-border: dotted hsl(var(--crt-hue), 100%, 90%) var(--border-thickness);
     --transition-time: 0.25s;
     --light-scanline: #0000;
-    --dark-scanline: #0002;
+    --dark-scanline: #0003;
 
     transition: var(--transition-time);
     /* animation: gay 5s ease infinite; */
